--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -45,7 +45,7 @@
     </form>
     <h2>Result</h2>
     {% if result %} 
-    <div id='result'><p><img src="{{ result }}"></p></div>
-    {% endif %} 
+    <div><p><img id='image' src="{{ result }}"></p></div>
+    {% endif %}  
   </body>
 </html>
