--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -24,9 +24,8 @@ form {
 }
 
 img {
-  max-width: 1000px
-  min-width: 500px
-  max-height: 1000px
+  max-width: 1000px;
+  min-width: 500px;
 }
 
 @media (min-width: 481px) {
